[gd_scene format=3 uid="uid://cfyh05uns3tds"]

[ext_resource type="Script" uid="uid://do6dyp31s12hq" path="res://scripts/human_walker.gd" id="1_g2rux"]
[ext_resource type="Texture2D" uid="uid://0lu1ro3b7hoi" path="res://assets/sprites/races/human/walker/HMMIdleBare.png" id="1_mayv3"]
[ext_resource type="Texture2D" uid="uid://cfa7ake06lr6l" path="res://assets/sprites/races/human/walker/HMMJumpBare.png" id="2_denma"]
[ext_resource type="Texture2D" uid="uid://yqxoo08pu7dh" path="res://assets/sprites/races/human/walker/HMMRunBare.png" id="3_c7jhf"]
[ext_resource type="Texture2D" uid="uid://beeog0qxy2l7w" path="res://assets/sprites/races/human/walker/HMMWalkBare.png" id="4_u0vvy"]
[ext_resource type="PackedScene" uid="uid://cpuulvo23casl" path="res://scenes/components/walker_component.tscn" id="6_fyoxm"]
[ext_resource type="PackedScene" uid="uid://bl1njoma5wyqx" path="res://scenes/components/raycast_component.tscn" id="7_owd54"]
[ext_resource type="PackedScene" uid="uid://7iswquvtufgl" path="res://scenes/components/climb_component.tscn" id="8_abcj1"]
[ext_resource type="PackedScene" uid="uid://byrwnaxtmdg35" path="res://scenes/components/stop_component.tscn" id="8_plrf6"]
[ext_resource type="PackedScene" uid="uid://6aj0rgkeg7tp" path="res://scenes/components/parachute_component.tscn" id="9_plrf6"]
[ext_resource type="PackedScene" uid="uid://bjpfimpfkurxj" path="res://scenes/components/builder_sides_component.tscn" id="10_cxa03"]
[ext_resource type="PackedScene" uid="uid://ntknpcqxcq42" path="res://scenes/components/miner_sides_component.tscn" id="10_kr46j"]
[ext_resource type="PackedScene" uid="uid://nnlsveo5n6jk" path="res://scenes/components/miner_down_component.tscn" id="11_iams2"]
[ext_resource type="Script" uid="uid://5pkjlmwen7vp" path="res://resources/BuilderPlatformData.gd" id="11_tfgdc"]
[ext_resource type="PackedScene" uid="uid://du3ww0s8lv35i" path="res://scenes/components/exploder_component.tscn" id="12_b811a"]
[ext_resource type="Script" uid="uid://bnojtrkw1dyj4" path="res://resources/ExploderData.gd" id="13_kr46j"]
[ext_resource type="PackedScene" uid="uid://dywikw5nj10s7" path="res://scenes/components/builder_diag_up_component.tscn" id="14_uvhwt"]
[ext_resource type="PackedScene" uid="uid://duscbmc61dxhx" path="res://scenes/components/miner_diag_up_component.tscn" id="17_mdu01"]

[sub_resource type="AtlasTexture" id="AtlasTexture_trceg"]
atlas = ExtResource("1_mayv3")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8y0u"]
atlas = ExtResource("1_mayv3")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkv2x"]
atlas = ExtResource("2_denma")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbj1t"]
atlas = ExtResource("2_denma")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_muem4"]
atlas = ExtResource("2_denma")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3eg"]
atlas = ExtResource("2_denma")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ld40"]
atlas = ExtResource("2_denma")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqmmt"]
atlas = ExtResource("2_denma")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc10j"]
atlas = ExtResource("2_denma")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jscy8"]
atlas = ExtResource("2_denma")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm3ni"]
atlas = ExtResource("2_denma")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6deb"]
atlas = ExtResource("2_denma")
region = Rect2(2304, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_og1vs"]
atlas = ExtResource("2_denma")
region = Rect2(2560, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wyq8"]
atlas = ExtResource("2_denma")
region = Rect2(2816, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxglm"]
atlas = ExtResource("2_denma")
region = Rect2(3072, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f3dj"]
atlas = ExtResource("3_c7jhf")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq6so"]
atlas = ExtResource("3_c7jhf")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv21b"]
atlas = ExtResource("3_c7jhf")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tel4y"]
atlas = ExtResource("3_c7jhf")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkpxi"]
atlas = ExtResource("3_c7jhf")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q0nq"]
atlas = ExtResource("3_c7jhf")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgi5k"]
atlas = ExtResource("3_c7jhf")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8jky"]
atlas = ExtResource("3_c7jhf")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmb1v"]
atlas = ExtResource("3_c7jhf")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuf3a"]
atlas = ExtResource("3_c7jhf")
region = Rect2(2304, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pibwh"]
atlas = ExtResource("4_u0vvy")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6pm6"]
atlas = ExtResource("4_u0vvy")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5he1u"]
atlas = ExtResource("4_u0vvy")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5poiv"]
atlas = ExtResource("4_u0vvy")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cjbq"]
atlas = ExtResource("4_u0vvy")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_chjal"]
atlas = ExtResource("4_u0vvy")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_txyw0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_trceg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8y0u")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkv2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbj1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muem4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp3eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ld40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqmmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc10j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jscy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm3ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6deb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og1vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wyq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxglm")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f3dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq6so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv21b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tel4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkpxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q0nq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgi5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8jky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmb1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuf3a")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pibwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6pm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5he1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5poiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cjbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chjal")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mayv3"]
radius = 5.0

[sub_resource type="Animation" id="Animation_fd2p4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_plrf6"]
resource_name = "idle_left"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g2rux"]
resource_name = "idle_right"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_abcj1"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3odiv"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_abcj1"]
_data = {
&"RESET": SubResource("Animation_fd2p4"),
&"idle_left": SubResource("Animation_plrf6"),
&"idle_right": SubResource("Animation_g2rux"),
&"walk_left": SubResource("Animation_abcj1"),
&"walk_right": SubResource("Animation_3odiv")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fd2p4"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3odiv"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_g2rux"]
blend_point_0/node = SubResource("AnimationNodeAnimation_fd2p4")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_3odiv")
blend_point_1/pos = 1.0
value_label = "x"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fd2p4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_tfgdc"]
states/walk/node = SubResource("AnimationNodeBlendSpace1D_g2rux")
states/walk/position = Vector2(454, 173)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_fd2p4")]

[sub_resource type="Resource" id="Resource_uvhwt"]
script = ExtResource("11_tfgdc")
atlas_coords = Vector2i(5, 60)
source_id = 1
metadata/_custom_type_script = "uid://5pkjlmwen7vp"

[sub_resource type="Resource" id="Resource_si16r"]
script = ExtResource("11_tfgdc")
atlas_coords = Vector2i(5, 60)
source_id = 1
build_time = 0.25
max_platforms = 12
metadata/_custom_type_script = "uid://5pkjlmwen7vp"

[sub_resource type="Resource" id="Resource_iams2"]
script = ExtResource("13_kr46j")
metadata/_custom_type_script = "uid://bnojtrkw1dyj4"

[node name="HumanWalker" type="CharacterBody2D" unique_id=2067324447]
z_index = 5
collision_layer = 2
collision_mask = 13
input_pickable = true
script = ExtResource("1_g2rux")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=756783718]
position = Vector2(1, -19)
scale = Vector2(0.155, 0.155)
sprite_frames = SubResource("SpriteFrames_txyw0")
animation = &"idle"
autoplay = "idle"
offset = Vector2(5, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=606766621]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_mayv3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1301857361]
libraries/ = SubResource("AnimationLibrary_abcj1")

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=737029478]
tree_root = SubResource("AnimationNodeStateMachine_tfgdc")
anim_player = NodePath("../AnimationPlayer")
parameters/walk/blend_position = 0.1560694

[node name="Label" type="Label" parent="." unique_id=1038723479]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -49.0
offset_right = 23.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
vertical_alignment = 1

[node name="WalkerComponent" parent="." unique_id=1176275030 node_paths=PackedStringArray("body") instance=ExtResource("6_fyoxm")]
unique_name_in_owner = true
body = NodePath("..")
speed = 40.0

[node name="BlockerComponent" parent="." unique_id=1364594845 node_paths=PackedStringArray("body", "walker_component") instance=ExtResource("8_plrf6")]
unique_name_in_owner = true
body = NodePath("..")
walker_component = NodePath("../WalkerComponent")

[node name="ClimberComponent" parent="." unique_id=1959145439 node_paths=PackedStringArray("body", "walker_component") instance=ExtResource("8_abcj1")]
unique_name_in_owner = true
body = NodePath("..")
walker_component = NodePath("../WalkerComponent")

[node name="FloaterComponent" parent="." unique_id=1504413853 node_paths=PackedStringArray("body", "walker_component") instance=ExtResource("9_plrf6")]
unique_name_in_owner = true
body = NodePath("..")
walker_component = NodePath("../WalkerComponent")

[node name="MinerSidesComponent" parent="." unique_id=478169238 node_paths=PackedStringArray("body", "walker_component") instance=ExtResource("10_kr46j")]
unique_name_in_owner = true
body = NodePath("..")
walker_component = NodePath("../WalkerComponent")

[node name="MinerDownComponent" parent="." unique_id=1679773306 node_paths=PackedStringArray("body") instance=ExtResource("11_iams2")]
unique_name_in_owner = true
body = NodePath("..")

[node name="BuilderSidesComponent" parent="." unique_id=36267222 node_paths=PackedStringArray("body", "walker_component", "ray_cast_down_right", "ray_cast_down_left") instance=ExtResource("10_cxa03")]
unique_name_in_owner = true
body = NodePath("..")
walker_component = NodePath("../WalkerComponent")
ray_cast_down_right = NodePath("../RaycastComponent/RayCastDownRight")
ray_cast_down_left = NodePath("../RaycastComponent/RayCastDownLeft")
platform_data = SubResource("Resource_uvhwt")

[node name="BuilderDiagUpComponent" parent="." unique_id=546022156 node_paths=PackedStringArray("body", "walker_component") instance=ExtResource("14_uvhwt")]
unique_name_in_owner = true
body = NodePath("..")
walker_component = NodePath("../WalkerComponent")
platform_data = SubResource("Resource_si16r")

[node name="ExploderComponent" parent="." unique_id=2028305549 node_paths=PackedStringArray("body", "walker_component", "head_label") instance=ExtResource("12_b811a")]
unique_name_in_owner = true
body = NodePath("..")
walker_component = NodePath("../WalkerComponent")
exploder_data = SubResource("Resource_iams2")
head_label = NodePath("../Label")

[node name="MinerDiagUpComponent" parent="." unique_id=1957729232 node_paths=PackedStringArray("body", "walker_component") instance=ExtResource("17_mdu01")]
unique_name_in_owner = true
body = NodePath("..")
walker_component = NodePath("../WalkerComponent")

[node name="RaycastComponent" parent="." unique_id=1206438048 node_paths=PackedStringArray("rc_top", "rc_head_right", "rc_head_left", "rc_torso_right", "rc_torso_left", "rc_right", "rc_left", "rc_knee_right", "rc_knee_left", "rc_feet_right", "rc_feet_left", "rc_down_right", "rc_down_left") instance=ExtResource("7_owd54")]
unique_name_in_owner = true
rc_top = NodePath("RayCastTop")
rc_head_right = NodePath("RayCastHeadRight")
rc_head_left = NodePath("RayCastHeadLeft")
rc_torso_right = NodePath("RayCastTorsoRight")
rc_torso_left = NodePath("RayCastTorsoLeft")
rc_right = NodePath("RayCastRight")
rc_left = NodePath("RayCastLeft")
rc_knee_right = NodePath("RayCastKneeRight")
rc_knee_left = NodePath("RayCastKneeLeft")
rc_feet_right = NodePath("RayCastFeetRight")
rc_feet_left = NodePath("RayCastFeetLeft")
rc_down_right = NodePath("RayCastDownRight")
rc_down_left = NodePath("RayCastDownLeft")

[node name="RayCastTop" type="RayCast2D" parent="RaycastComponent" unique_id=1735825449]
unique_name_in_owner = true
position = Vector2(0, -28)
target_position = Vector2(0, -5)
collision_mask = 5

[node name="RayCastHeadRight" type="RayCast2D" parent="RaycastComponent" unique_id=1008582713]
unique_name_in_owner = true
position = Vector2(0, -28)
target_position = Vector2(6, 0)
collision_mask = 5

[node name="RayCastHeadLeft" type="RayCast2D" parent="RaycastComponent" unique_id=1313839730]
unique_name_in_owner = true
position = Vector2(0, -28)
target_position = Vector2(-6, 0)
collision_mask = 5

[node name="RayCastTorsoRight" type="RayCast2D" parent="RaycastComponent" unique_id=607105754]
unique_name_in_owner = true
position = Vector2(0, -20)
target_position = Vector2(6, 0)
collision_mask = 5

[node name="RayCastTorsoLeft" type="RayCast2D" parent="RaycastComponent" unique_id=645059255]
unique_name_in_owner = true
position = Vector2(0, -20)
target_position = Vector2(-6, 0)
collision_mask = 5

[node name="RayCastRight" type="RayCast2D" parent="RaycastComponent" unique_id=1528215266]
unique_name_in_owner = true
position = Vector2(0, -12)
target_position = Vector2(6, 0)
collision_mask = 5

[node name="RayCastLeft" type="RayCast2D" parent="RaycastComponent" unique_id=1119685255]
unique_name_in_owner = true
position = Vector2(0, -12)
target_position = Vector2(-6, 0)
collision_mask = 5

[node name="RayCastKneeRight" type="RayCast2D" parent="RaycastComponent" unique_id=1908363203]
unique_name_in_owner = true
position = Vector2(0, -4)
target_position = Vector2(6, 0)
collision_mask = 13

[node name="RayCastKneeLeft" type="RayCast2D" parent="RaycastComponent" unique_id=418200492]
unique_name_in_owner = true
position = Vector2(0, -4)
target_position = Vector2(-6, 0)
collision_mask = 13

[node name="RayCastFeetRight" type="RayCast2D" parent="RaycastComponent" unique_id=1759822335]
unique_name_in_owner = true
target_position = Vector2(6, 0)
collision_mask = 13

[node name="RayCastFeetLeft" type="RayCast2D" parent="RaycastComponent" unique_id=1525911087]
unique_name_in_owner = true
target_position = Vector2(-6, 0)
collision_mask = 13

[node name="RayCastDownRight" type="RayCast2D" parent="RaycastComponent" unique_id=1392389258]
unique_name_in_owner = true
position = Vector2(6, -2)
target_position = Vector2(0, 12)
collision_mask = 13

[node name="RayCastDownLeft" type="RayCast2D" parent="RaycastComponent" unique_id=662098050]
unique_name_in_owner = true
position = Vector2(-6, -2)
target_position = Vector2(0, 12)
collision_mask = 13

[connection signal="finished_blocking" from="BlockerComponent" to="." method="_on_blocker_component_finished_blocking"]
[connection signal="finished_climbing" from="ClimberComponent" to="." method="_on_climber_component_finished_climbing"]
[connection signal="finished_floating" from="FloaterComponent" to="." method="_on_floater_component_finished_floating"]
[connection signal="finished_mining" from="MinerSidesComponent" to="." method="_on_miner_sides_component_finished_mining"]
[connection signal="finished_mining" from="MinerDownComponent" to="." method="_on_miner_down_component_finished_mining"]
[connection signal="finished_building" from="BuilderSidesComponent" to="." method="_on_builder_sides_component_finished_building"]
[connection signal="finished_building" from="BuilderDiagUpComponent" to="." method="_on_builder_diag_up_component_finished_building"]
